fixed issues with the website elements displaying badly on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ a {
 
 header {
     display: flex;    
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 10px;
     color: #F9FAF8;
@@ -28,7 +28,6 @@ header {
     padding: 0;
     display: flex;
     gap: 15px;
-    margin-right: 200px;
     text-decoration: none;
 }
 
@@ -37,7 +36,6 @@ header {
 }
 
 .logo {
-    margin-left: 200px;
     font-size: 24px;
     font-weight: bolder;
 }
@@ -147,17 +145,32 @@ h1 {
     max-width: 1000px;
 }
 
+.quotee-container {
+    display: flex;
+    flex: none;
+}
+
+.quotee-spacer {
+    flex: 1 1 400px;
+}
+
 .quotee {
     padding: 0 30px;
     margin: 0;
-    margin-left: 400px;
+}
+
+.call-to-action-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .call-to-action {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 120px 240px;
+    margin: 120px 0;
+    max-width: 900px;
     padding: 50px;
     background-color: #3882F6;
     border-radius: 15px;
